drkns 04.09.2016 23:49:35 +0200 - build 4778

1. Рефакторинг keyboard.cpp. Выкинуто много, много копипасты. Возможны сказочные чудеса.

2. Уточнение отрисовки часов при старте.

3. 4777 мог падать при закрытии некоторых окон.

zg 04.09.2016 21:21:02 +0200 - build 4777

1. рефакторинг менеджера окон.

zg 04.09.2016 15:37:13 +0200 - build 4776

1. если запрещена перерисовка диалога, не перерисовываем списки и открытые комбобоксы.

drkns 03.09.2016 18:19:14 +0200 - build 4775

1. Падение при определённых манипуляциях с панелями плагинов.

2. Утечка там же.

zg 01.09.2016 17:39:45 +0200 - build 4774

1. 0003288: ShowTotalSize for Plugin.

drkns 01.09.2016 01:21:07 +0200 - build 4773

1. Продолжение 4772.

drkns 31.08.2016 03:08:55 +0200 - build 4772

1. Очередное переосмысление концепции обработки исключений.

zg 29.08.2016 19:46:17 +0200 - build 4771

1. FSF.FarNameToInputRecord неправильно заполнял KeyEvent.uChar.UnicodeChar для клавиш типа "AltShift8".

drkns 25.08.2016 14:55:58 +0200 - build 4770

1. Добавим нормальную валидацию конфигурационных параметров, дабы не размызвать проверки ровным слоем по всему коду.

2. Второй параметр Editor.Set теперь опционален (по умолчанию -1).

shmuel 25.08.2016 14:24:34 +0200 - build 4769

1. Ещё одно уточнение 4767.

shmuel 25.08.2016 13:53:19 +0200 - build 4768

1. Уточнение 4767.

shmuel 25.08.2016 13:27:23 +0200 - build 4767

1. MacroAPI: вызов Editor.Set(0) выставлял длину таба равной нулю, что в дальнейшем приводило к падению.

drkns 25.08.2016 00:57:25 +0200

1. Продолжение валидации шапок.

drkns 24.08.2016 18:08:24 +0200 - build 4766

1. Уточнения обработки исключений.

2. После 4709 не работало изменение размера консоли с помощью "mode x, y".

drkns 23.08.2016 11:20:47 +0200 - build 4765

1. Не работал поиск в UTF8-файлах во вьювере.

2. Там же - криво работал поиск по регулярным выражениям.

drkns 22.08.2016 22:01:40 +0200

1. GCC 6.

drkns 22.08.2016 11:43:23 +0200

1. Приведены в порядок шапки во всех cpp/hpp.
