@@ -1,3 +1,9 @@
+drkns 05.09.2016 00:52:20 +0200 - build 4779
+
+1. Оказывается, есть плагины, считающие, что можно в Message передавать nullptr вместо "".
+
+2. GCC warnings.
+
 drkns 04.09.2016 23:49:35 +0200 - build 4778
 
 1. Рефакторинг keyboard.cpp. Выкинуто много, много копипасты. Возможны сказочные чудеса.
